--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">FaceApp CycleGAN</string>
+    <string name="app_name">FaceApp</string>
     
-    <string name="select_button">Select image</string>
+    <string name="select_button">Wgraj zdjęcie</string>
     
-    <string name="select_title">Pick a way:</string>
-    <string name="take_photo">Take the picture</string>
-    <string name="choose_gallery">Choose from gallery</string>
+    <string name="select_title">Wybierz sposób:</string>
+    <string name="take_photo">Zrób zdjęcie</string>
+    <string name="choose_gallery">Znajdź w galerii</string>
     
 </resources>
